force-app/main/default/objects/Omni_Survey_Tracking__c/Omni_Survey_Tracking__c.object-meta.xml
<CustomObject>
    <label>Omni Survey Tracking</label>
    <nameField>
        <label>Omni Survey Tracking Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Omni Survey Trackings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>