force-app/main/default/objects/Omni_Survey_Tracking__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Omni Survey Trackings</relationshipLabel>
    <relationshipName>Omni_Survey_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>