force-app/main/default/objects/Omni_Survey_Tracking__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <label>Business Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Omnitracs Domestic</fullName>
                <default>true</default>
                <label>Omnitracs Domestic</label>
            </value>
            <value>
                <fullName>Roadnet</fullName>
            </value>
            <value>
                <fullName>XRS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>