force-app/main/default/objects/Omni_Survey_Tracking__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Omni Survey Trackings</relationshipLabel>
    <relationshipName>Omni_Survey_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>