force-app/main/default/objects/Omni_Survey_Tracking__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Omni Survey Trackings</relationshipLabel>
    <relationshipName>Omni_Survey_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>