force-app/main/default/objects/Omni_Survey_Tracking__c/fields/Omni_Survey__c.field-meta.xml
<CustomField>
    <fullName>Omni_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Omni Survey</label>
    <referenceTo>Customer_Survey__c</referenceTo>
    <relationshipLabel>Omni Survey Trackings</relationshipLabel>
    <relationshipName>Omni_Survey_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>