force-app/main/default/objects/Omni_Survey_Tracking__c/fields/Project_Group__c.field-meta.xml
<CustomField>
    <fullName>Project_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Group</label>
    <referenceTo>pse__Grp__c</referenceTo>
    <relationshipLabel>Omni Survey Trackings</relationshipLabel>
    <relationshipName>Omni_Survey_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>