force-app/main/default/objects/Omni_Survey_Tracking__c/fields/Project_Manager__c.field-meta.xml
<CustomField>
    <fullName>Project_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Omni Survey Trackings (Project Manager)</relationshipLabel>
    <relationshipName>Omni_Survey_Trackings1</relationshipName>
    <type>Lookup</type>
</CustomField>