force-app/main/default/objects/Omni_Survey_Tracking__c/fields/PS_Project__c.field-meta.xml
<CustomField>
    <fullName>PS_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PS Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Omni Survey Trackings</relationshipLabel>
    <relationshipName>Omni_Survey_Trackings</relationshipName>
    <type>Lookup</type>
</CustomField>