force-app/main/default/objects/Omni_Survey_Tracking__c/fields/Subject_User__c.field-meta.xml
<CustomField>
    <fullName>Subject_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subject User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Omni_Survey_Trackings1</relationshipName>
    <type>Lookup</type>
</CustomField>