force-app/main/default/objects/Omni_Survey_Tracking__c/fields/Survey_Responded_To__c.field-meta.xml
<CustomField>
    <fullName>Survey_Responded_To__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Survey Responded To</label>
    <type>Checkbox</type>
</CustomField>