force-app/main/default/objects/Omni_Survey_Tracking__c/fields/Survey_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Survey_Sent_Date__c</fullName>
    <label>Survey Sent Date</label>
    <type>Date</type>
</CustomField>