force-app/main/default/objects/Omni_Survey_Tracking__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>